[gd_scene load_steps=7 format=1]

[ext_resource path="res://scene/HUD.gd" type="Script" id=1]
[ext_resource path="res://misc/opendyslexic48.fnt" type="BitmapFont" id=2]
[ext_resource path="res://misc/opendyslexic32.fnt" type="BitmapFont" id=3]
[ext_resource path="res://image/popup_bg.tex" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="Animation" id=2]

resource/name = "info_anim"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LbInfo:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 180, 740 ), Vector2( 180, 650 ), Vector2( 180, 500 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("LbInfo:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="LbStar" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 841.0
margin/top = 25.0
margin/right = 1123.0
margin/bottom = 74.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.902344, 0.740204, 0, 1 )
text = "STAR* 100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LbLife" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 535.0
margin/top = 19.0
margin/right = 761.0
margin/bottom = 68.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.320557, 1, 0.0117188, 1 )
text = "$ $ $ $ $"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LbLevel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 206.0
margin/top = 26.0
margin/right = 444.0
margin/bottom = 75.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.168457, 0.9375, 1 )
text = "LEVEL: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BtnBack" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 10.0
margin/right = 165.0
margin/bottom = 87.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="Panel" type="Panel" parent="."]

visibility/self_opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 230.0
margin/right = 159.0
margin/bottom = 625.0

[node name="ItemInventory" type="VButtonArray" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 159.0
margin/bottom = 400.0
custom_styles/selected = SubResource( 1 )
custom_fonts/font_selected = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_constants/button_separator = 50
flat = false
button/count = 0
button/min_button_size = -1.0
button/align = 0

[node name="LbFps" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 742.0
margin/right = 150.0
margin/bottom = 775.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FPS: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LbInfo" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 180.0
margin/top = 740.0
margin/right = 438.0
margin/bottom = 773.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.65625, 0, 1 )
text = "Game is ready!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/info_anim = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]

[connection signal="button_selected" from="Panel/ItemInventory" to="." method="_on_ItemInventory_button_selected"]


